PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2017 PHP 7.0.21

- Core:
  . Fixed bug #74658 (Undefined constants in array properties result in broken
    properties). (Laruence)

- SPL:
  . Fixed bug #74478 (null coalescing operator failing with SplFixedArray).
    (jhdxr)

8 Jun 2017 PHP 7.0.20

- Core:
  . Fixed bug #74600 (crash (SIGSEGV) in _zend_hash_add_or_update_i).
    (Laruence)
  . Fixed bug #74546 (SIGILL in ZEND_FETCH_CLASS_CONSTANT_SPEC_CONST_CONST).
    (Laruence)

- intl:
  . Fixed bug #74468 (wrong reflection on Collator::sortWithSortKeys). (villfa)

- MySQLi:
  . Fixed bug #74547 (mysqli::change_user() doesn't accept null as $database
    argument w/strict_types). (Anatol)

- Opcache:
  . Fixed bug #74596 (SIGSEGV with opcache.revalidate_path enabled). (Laruence)

- phar:
  . Fixed bug #51918 (Phar::webPhar() does not handle requests sent through PUT
    and DELETE method). (Christian Weiske)

- Standard:
  . Fixed bug #74510 (win32/sendmail.c anchors CC header but not BCC).
    (Damian Wadley, Anatol)

- xmlreader:
  . Fixed bug #74457 (Wrong reflection on XMLReader::expand). (villfa)

11 May 2017 PHP 7.0.19

- Core:
  . Fixed bug #74188 (Null coalescing operator fails for undeclared static
    class properties). (tpunt)
  . Fixed bug #74408 (Endless loop bypassing execution time limit). (Laruence)
  . Fixed bug #74410 (stream_select() is broken on Windows Nanoserver).
    (Matt Ficken)
  . Fixed bug #74337 (php-cgi.exe crash on facebook callback).
    (Anton Serbulov)
  . Patch for bug #74216 was reverted. (Anatol)

- Date:
  . Fixed bug #74404 (Wrong reflection on DateTimeZone::getTransitions).
    (krakjoe)
  . Fixed bug #74080 (add constant for RFC7231 format datetime). (duncan3dc)

- DOM:
  . Fixed bug #74416 (Wrong reflection on DOMNode::cloneNode).
    (Remi, Fabien Villepinte)

- Fileinfo: